components/nz01c70rd-go/base/service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app.kubernetes.io/instance: nz01c70rd-go
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: nz01c70rd-go 
  name: nz01c70rd-go
spec:
  ports:
  - port: 8081 
    targetPort: 8081 
  selector:
    app.kubernetes.io/instance: nz01c70rd-go
