components/nz01c70rd-go/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: nz01c70rd-go
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: nz01c70rd-go 
  name: nz01c70rd-go
spec:
  port:
    targetPort: 8081 
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nz01c70rd-go
    weight: 100
